<!--
  ~ Copyright 2022 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Ctral+Frag</string>
    <string name="title_account_qr">계좌 QR</string>
    <string name="desc_account_qr">계좌 QR 이미지</string>
    <string name="hint_scan_in_bank_app">은행앱에서 스캔하세요</string>
    <string name="pay_title">결제 방법 선택</string>
    <string name="pay_subtitle">빠르게 열기를 선택하세요</string>
    <string name="label_account_qr">계좌 QR</string>
    <string name="label_inapp_scan">앱에서 스캔</string>
    <string name="label_kakaopay">카카오페이</string>
    <string name="label_naverpay">네이버페이</string>
    <string name="qr_code">QR 코드</string>
    <string name="last_updated">마지막 갱신: %1$s</string>
    <string name="last_updated_placeholder">마지막 갱신: -</string>
</resources>